GRMA-45 Fix double scrollbar problem on List table

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,7 +65,6 @@ tbody tr {
 }
 
 tbody {
-  display: block;
   overflow: auto;
   height: calc(100% - 2.5rem);
   background-color: var(--color-background-surface-default);
